Revert "fixed the grid for timelog content on small screens"
This reverts commit 9d3c10bdbefb12b00dc33a601038014e071c822d.

--- a/src/app/dashboard/timelog/timelog-calendar/timelog-calendar.component.css
+++ b/src/app/dashboard/timelog/timelog-calendar/timelog-calendar.component.css
@@ -1,6 +1,8 @@
 .timelog-calendar{
     /* border:1px solid rgb(195, 236, 255); */
     background-color: #fcfcfc;
+
+    margin: 10px;
 }
 
 
